--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  snippet_coder_utils: ^1.0.15
-  api_cache_manager: ^1.0.2
-  google_fonts: ^6.2.1
+  http: ^0.13.3
+  shared_preferences: ^2.0.6
+  flutter_secure_storage: ^9.2.2
+  jwt_decoder: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
