--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/image/logo.png
+    - assets/image/login.png
+    - assets/image/signup.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
